# squirreltalks

./: MainPage.md  Makefile  ProjectHome.md  SquirrelTalks.files  SquirrelTalks.pro  config.status  configure  configure.in  squirreltalks.files  squirreltalks.includes  test.cpp
autom4te.cache/: output.0  requests  traces.0
src/: Makefile.Debug  Makefile.Release  SquirrelTalks.pro  moc_squirreltalks.cpp  squirreltalks.ui  ui_squirreltalks.h
src/PhysicalEngine/VoiceCapture/: cry.pattern.c
src/ui/: .cproject  .directory  .project  SquirrelTalks  main.cpp  squirreltalks.cpp  squirreltalks.h  squirreltalks.ui  ui_squirreltalks.h
src/ui/debug/: moc_squirreltalks.cpp
src/ui/release/: moc_squirreltalks.cpp
